modify the layout for each page

--- a/layout1.html
+++ b/layout1.html
@@ -9,7 +9,7 @@
 
       function getNameByMemberID($memberID){
         global $wpdb;
-        $result = $wpdb->get_results("SELECT Name FROM Teacher_infor WHERE Member=$memberID);
+        $result = $wpdb->get_results("SELECT Name FROM Teacher_infor WHERE Member=$memberID");
         return $result[0]->Name;
       }
 
