update the select month

--- a/table.html
+++ b/table.html
@@ -351,11 +351,9 @@
         <p></p>
         <p></p>
         <p></p>
+        <p>Select Month</p>
 
         <table id="right_table">
-          <tr id="right_table">
-            <td id="right_table">Select Month</td>
-          </tr>
           <tr id="right_table">
             <form action="#" method="post">
               <select name="Month">
