--- a/table.html
+++ b/table.html
@@ -372,6 +372,7 @@ function getNumOfItemByItemIDAndMemeberID($memberID, $item_no){
     <div class="topnav">
       <a href="http://www.melodysac.com.sg/index.php/en/layout1/">Layer</a>
       <a href="http://www.melodysac.com.sg/index.php/en/contact/">Contact Us</a>
+	  <a HREF="javascript:window.print()">print</a>
       <form action="#" method="get">
 		<button name="logout" value = 1>Logout</button>
 	  </form>
