--- a/layout2.html
+++ b/layout2.html
@@ -17,7 +17,7 @@
   		}
 		$dateFrom = $_SESSION['dateFrom'];
 		$dateTo = $_SESSION['dateTo'];
-      $_SESSION['cMinor1']=1001;// to be deprecated
+      //$_SESSION['cMinor1']=1001;// to be deprecated
 
       function getNameByMemberID($memberID){
         global $wpdb;
