update the button style

--- a/layout1.html
+++ b/layout1.html
@@ -139,6 +139,17 @@
         color: black;
       }
 
+      .topnav button {
+        float: right;
+        display: block;
+        color: white;
+        background-color: #333;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        border: 0px;
+      }
+	  
       .label_moving {
         width: 500px;
         background-color: red;
@@ -381,9 +392,10 @@
     </div>
     <div class="topnav">
       <a href="http://www.melodysac.com.sg/index.php/en/table2/">Table</a>
+      <a href="http://www.melodysac.com.sg/index.php/en/contact/">Contact Us</a>
       <form action="#" method="get">
-		<button name="logout" value = 1>Logout</button>
-	  </form>
+        <button name="logout" value = 1>Logout</button>
+      </form>
     </div>
 
     <div class="label_moving">Hurry up! The cello already be sold 10!!</div>
