--- a/layout1.html
+++ b/layout1.html
@@ -46,22 +46,25 @@
         return sizeof($sum);
       }
   
-      function getNumOfItemByItemIDAndMemeberID($memberID, $item_no){
-        global $wpdb;
+function getNumOfItemByItemIDAndMemeberID($memberID, $item_no){
+				global $wpdb;
 				global $dateFrom;
 				global $dateTo;
-        $sum = $wpdb->get_results("SELECT Number FROM Melody_performance WHERE Member=$memberID AND Item_no=$item_no");
+				$sum = $wpdb->get_results("SELECT Number FROM `Melody_performance` WHERE Member =$memberID AND Item_no=$item_no AND dDate >=\" $dateFrom \"AND dDate <=\" $dateTo\"");
 
-        if(sizeof($sum) == 0)
-          return 0;
-        else {
-          $result;
-          for($x = 0; $x < sizeof($sum); $x++){
-            $result = $result + $sum[$x]->Number;
-          }
-          return $result;
-        }
-      }
+				
+				if(sizeof($sum)==0)
+					return 0;
+				else 
+				{
+					$result;
+					for($x=0;$x<sizeof($sum);$x++){
+						$result = $result+ $sum[$x]->Number;
+						
+					}
+					return $result;
+				}
+}
 
       function getMemberIDFromName($Name){
         global $wpdb;
