--- a/layout1.html
+++ b/layout1.html
@@ -401,7 +401,7 @@ function getNumOfItemByItemIDAndMemeberID($memberID, $item_no){
       </form>
     </div>
 
-    <div class="label_moving">Hurry up! The cello already be sold 10!!</div>
+    <div class="label_moving">Hurry up! <?php echo rand(5,20); ?> cellos are sold today!!</div>
 
     <div class="row">
       <div class="column_left">
