--- a/table.html
+++ b/table.html
@@ -385,9 +385,9 @@
     </div>
 
     <div class="topnav">
-      <a href="http://www.melodysac.com.sg/index.php/en/layout1/">Layer</a>
+      <a href="http://www.melodysac.com.sg/index.php/en/layout1/">Chart</a>
       <a href="http://www.melodysac.com.sg/index.php/en/contact/">Contact Us</a>
-      <a HREF="javascript:window.print()">print</a>
+      <a HREF="javascript:window.print()">Print</a>
       <form action="#" method="get">
         <button name="logout" value = 1>Logout</button>
       </form>
@@ -428,7 +428,7 @@
 				}
 			  ?>
               </select>
-              <input type="submit" value="Submit the form"/>
+              <input type="submit" value="Submit"/>
             </form>
           </tr>
 
