--- a/layout2.html
+++ b/layout2.html
@@ -399,7 +399,7 @@
     </div>
 
     <div class="topnav">
-      <a href="http://www.melodysac.com.sg/index.php/en/layout1/">Up Layer</a>
+      <a href="http://www.melodysac.com.sg/index.php/en/layout1/">Upper Layer</a>
       <a href="http://www.melodysac.com.sg/index.php/en/table2/">Table</a>
       <a href="http://www.melodysac.com.sg/index.php/en/contact/">Contact Us</a>
       <form action="#" method="get">
@@ -407,7 +407,7 @@
       </form>
     </div>
 
-    <div class="label_moving">Hurry up! The cello already be sold 10!!</div>
+    <div class="label_moving">Hurry up! <?php echo rand(5,20; ?> cellos are sold today!!</div>
 
     <div class="row">
       <div class="column_left">
