--- a/adminTable.html
+++ b/adminTable.html
@@ -78,13 +78,15 @@ getDatefromToByCurrent();
 <table id="myTable">
   <tr>
     <th>Name</th>
+    <th onclick="sortTable(1)" href="javascript:void(0);">MemberID</th>
     <?php
     for($i=1; $i<=$totalItemNumber;$i++){
-    echo "<th>Item$i</th>
-    ";
+    //echo "<th>Item$i</th>
+    //";
+    echo "<th onclick=\"sortTable($i+1)\" href=\"javascript:void(0);\">Item$i</th>";
 }
     ?>
-    <th>Total</th>
+    <th onclick="sortTable(<?php echo $totalItemNumber+2; ?>)" href="javascript:void(0);">Total</th>
   </tr>
   <?php
   $list = getAllTeacherMemberID();
@@ -92,6 +94,7 @@ getDatefromToByCurrent();
   		$name = getNameByMemberID($list[$x]);
   		$sale = 0;
   		echo "<td>$name</td>";
+  		echo "<td>$list[$x]</td>";
   		for($i=1; $i<=$totalItemNumber;$i++){
   		$num =getNumOfItemByItemIDAndMemeberID($list[$x],$i);
   		echo "<td>$num</td>";
@@ -105,7 +108,7 @@ getDatefromToByCurrent();
   
 </table>
 <script>
-function sortTable() {
+function sortTable(colnum) {
   var table, rows, switching, i, x, y, shouldSwitch,numOfCol;
   table = document.getElementById("myTable");
   switching = true;
@@ -124,8 +127,8 @@ function sortTable() {
       shouldSwitch = false;
       /*Get the two elements you want to compare,
       one from current row and one from the next:*/
-      x = rows[i].getElementsByTagName("TD")[numOfCol-1];
-      y = rows[i + 1].getElementsByTagName("TD")[numOfCol-1];
+      x = rows[i].getElementsByTagName("TD")[colnum];
+      y = rows[i + 1].getElementsByTagName("TD")[colnum];
       //check if the two rows should switch place:
       if (parseInt(x.innerHTML) < parseInt(y.innerHTML)) {
         //if so, mark as a switch and break the loop:
@@ -141,6 +144,7 @@ function sortTable() {
     }
   }
 }
+
 </script>
 </body>
 </html>
