--- a/layout1.html
+++ b/layout1.html
@@ -149,6 +149,12 @@
         text-decoration: none;
         border: 0px;
       }
+      
+      /* Change color on hover */
+      .topnav button:hover {
+        background-color: #ddd;
+        color: black;
+      }
 	  
       .label_moving {
         width: 500px;
